2006-10-26  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Add "mph.h" to the generated code for map.c, so that
	  EOVERFLOW is defined on Win32.
	* map.c: Flush (adds #include "mph.h").

2006-10-25  Wade berrier  <wberrier@novell.com>

	* Makefile.am: remove map-icalls.h so make dist succeeds

2006-10-24  Jonathan Pryor  <jonpryor@vt.edu>

	* dirent.c, errno.c, fcntl.c, fstab.c, grp.c, macros.c, pwd.c, signal.c, 
	  stdio.c, stdlib.c, string.c, sys-mman.c, sys-sendfile.c, sys-stat.c, 
	  sys-statvfs.c, sys-time.c, sys-xattr.c syslog.c, time.c, unistd.c, 
	  utime.c: Remove structure definitions, and use the
	  create-native-map generated definitions within map.h.  Update function
	  prototypes to match current map.h declarations.
	* map.c, map.h: Flush (current create-native-map output).
	* mph.h: Don't include "map-icalls.h"; "icalls" are now in map.h.
	* create-native-map.exe: Added; cached version of create-native-map.exe
	  used to update map.c, map.h.  (create-native-map.exe source within
	  mono-tools/create-native-map.)
	* Makefile.am: Added update-create-native-map target to update 
	  create-native-map.exe using pkg-config & the create-native-map.pc package. 
		Use create-native-map.exe to generate map.* files instead of make-map.exe.
	* sys-statvfs.c: Add Mono_Posix_ToStatvfs, Mono_Posix_FromStatvfs exports.

2006-09-15  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Remove CRYPT_LIBS use; we no longer rely on libcrypt.
	* stdlib.c: Remove setkey(3) wrapper.
	* unistd.c: Remove encrypt(3) wrapper.

2006-08-13  Miguel de Icaza  <miguel@novell.com>

	* serial.c (get_bytes_in_buffer): Change the signature, we do not
	return any meaningful error other than -1.

2006-06-28  Zoltan Varga  <vargaz@gmail.com>

	* mph.h (MPH_INTERNAL): Only use this if HAVE_VISIBILITY_HIDDEN is
	defined since it is not supported on some archs with gcc.

2006-04-28  Wade Berrier <wberrier@novell.com>

	* serial.c: Add sys/filio.h for solaris for FIONREAD
